another try to fix wrap

--- a/src/components/Scheme/ContributionRewardExtRewarders/Competition/Competitions.scss
+++ b/src/components/Scheme/ContributionRewardExtRewarders/Competition/Competitions.scss
@@ -302,7 +302,7 @@ a.blueButton {
         }
 
         .results {
-          display: inline-block;
+          display: inline-grid;
           position: relative;
           bottom: 4px;
 
